--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.9.4",
+    "@pinia/nuxt": "^0.5.1",
     "drizzle-kit": "^0.19.13",
     "nuxt": "^3.8.1",
     "vue": "^3.3.8",
